<resources>
    <string name="app_name">Museums For Everyone</string>
    <string name="accessibility">Accesibilidad</string>
    <string name="enter_museum">Entrar al Museo</string>
    <string name="vision_problems">Problemas de Visión</string>
    <string name="hearing_problems">Problemas Auditivos</string>
    <string name="without_accesibility_problems">Sin problemas de accesibilidad</string>
    <string name="instruction_title">Instrucciones</string>
    <string name="instructions">Instrucciones</string>
    <string name="continue_button">Continuar</string>
    <string name="artwork_info">Info Obras</string>
    <string name="guided_visit">Visita Guiada</string>
    <string name="artwork_list">Lista de Obras</string>
    <string name="artwork_scann">Escanear obra</string>
    <string name="artwork_pictures">Pinturas</string>
    <string name="artwork_sculptures">Esculturas</string>
    <string name="artwork_movies">Vídeos</string>
    <string name="openDrawer">Open Drawer </string>
    <string name="closeDrawer">Close Drawer </string>
    <string name="nfc_scann">Escanear NFC</string>
    <string name="qr_scann">Escanear QR</string>
    <string name="language">Idioma</string>
    <string name="home">Inicio</string>
    <string name="preferences">Preferencias</string>
    <string name="contact_info">Información y contacto</string>
    <string name="scannQR">Escanear código QR</string>
    <string name="Permit_Granted">Permisos concedidos</string>
    <string name="Permit_Denied">Permisos denegados</string>
    <string name="Permits">Solicitud de permisos</string>
    <string name="QR_Scan_Instrucctions">Para analizar un código QR apunte con el teléfono hacia el código QR hasta que aparezca centrado en la pantalla</string>
    <string name="show_next_image">mostrar la foto siguiente</string>
    <string name="show_previous_image">mostrar la foto anterior</string>
    <string name="show_next_video">mostrar el video siguiente</string>
    <string name="show_previous_video">mostrar el video anterior</string>
    <string name="Permit_Reason">Sin los permisos de la cámara no podrá escanear los códigos QR de la obra deseada.</string>
    <string name="QR_Error">El código QR no es válido</string>
    <string name="images_of_content">Images of content</string>
    <string name="title_artwork">title_artwork</string>
    <string name="type_artwork">type_artwork</string>
    <string name="description_artwork">Description artwork</string>
    <string name="video_description">video description</string>
    <string name="image_description">Image description</string>
    <string name="NFC_Error_Disabled">El sensor NFC está desactivado. Por favor actívelo en su dispositivo y vuelva a intentarlo.</string>
    <string name="Scan_with_QR">Escanear con QR</string>
    <string name="NFCScan_instructions">Para analizar la pegatina NFC active el sensor NFC de su dispositivo y acérquelo a la etiqueta NFC por la parte trasera del dispositivo. Si desea escanear un QR en lugar de NFC pulse el siguiente botón.</string>
    <string name="exit_Message">¿Seguro que quieres salir de la aplicación?</string>
    <string name="yes">Sí</string>
    <string name="No">No</string>
    <string name="Camera_Permit">Para poder escanear un código QR necesita darle a la aplicación los permisos de uso de la cámara.</string>
    <string name="Permit_Reason_Ask_Again">Sin los permisos de la cámara no podrá escanear los códigos QR de la obra deseada.\n¿Intentar de nuevo?</string>
    <string name="NFC_Permit">Para poder escanear un código NFC necesita darle a la aplicación los permisos de uso del sensor NFC.</string>
    <string name="NFC_Reason_Ask_again">Para poder escanear un código NFC necesita darle a la aplicación los permisos de uso del sensor NFC.\n¿Intentar de nuevo?</string>
    <string name="instructions_without_discapacity">Instrucciones sin discapacidad</string>
    <string name="instructions_with_sight_discapacity">Instrucciones problemas de visión</string>
    <string name="instructions_with_sound_problems">Instrucciones problemas auditivos</string>
    <string name="instructions_Error">No se han cargado instrucciones</string>
    <string name="main_instructions_1">Bienvenido a Museums For Everyone, la aplicación para el Museo Fundación Caja Granada. A través de esta aplicación podrás explorar todos los contenidos del museo. ¿Comenzamos?</string>
    <string name="instructions_Main2">A continuación podrás seleccionar la configuración de accesibilidad que desees para la aplicación o bien entrar directamente al museo. Entre las opciones de accesibilidad se pueden escoger herramientas de narración de voz o textos y videos adaptados para el lenguaje de signos</string>
    <string name="accesibility">Accesibilidad</string>
    <string name="scan_code_Accesibility">Escanear código de un contenido. Botón.</string>
    <string name="description_Main_Photo">Fotografía aérea del museo fundación caja granada</string>
    <string name="scann_code">Escanear código</string>
    <string name="list_content_Accesibility">Listar contenidos del museo. Botón.</string>
    <string name="listar_contenido">Listar contenido</string>
    <string name="guided_visit_Accesibility">Visita guiada por las obras del museo. Botón.</string>
    <string name="main_menu">Menú principal</string>
    <string name="main_menu_description_instructions">En el menú principal encontrarás las opciones más importantes de la aplicación.</string>
    <string name="scan_code_instructions_description">"Durante la visita al museo podrá encontrar códigos que podrá escanear usando el botón escanear código y con ello saber más información sobre las obras. "</string>
    <string name="artwork_instruction_description">También podrá listar todas las obras disponibles en el museo usando el botón listar obras y seleccionar la categoría deseada.</string>
    <string name="guided_visit_instruction_description">Seleccionando el botón de visitas guiadas podrás recorrer las obras del museo en diferentes tipos de visitas programadas por el museo.</string>
    <string name="slider_instruction_description">"Pulsando en el icono del menú en la esquina superior izquierda o deslizando el dedo desde el lateral izquierdo hacia el centro de la pantalla podrás abrir el menú lateral en cualquier sección de la aplicación. "</string>
    <string name="slider_menu">Menú lateral</string>
    <string name="error_reading_NFC">No se ha encontrado código NFC</string>
    <string name="invalid_NFC_code">El código NFC no es válido</string>
    <string name="NFC_code_not_found">No se ha encontrado código NFC</string>
    <string name="accesibility_description">Opciones de accesibilidad. Ajuste las herramientas de accesibilidad disponibles.Botón.</string>
    <string name="enter_museum_description">Entrar al contenido principal de la aplicación. Botón.</string>
    <string name="accesibility_description_card">Opciones de accesibilidad. \nAjuste las herramientas de accesibilidad disponibles.</string>
    <string name="enter_museum_description_card">Entrar al contenido principal de la aplicación.</string>
    <string name="talckback_option">Narrador de voz</string>
    <string name="sign_language">Lenguaje de signos</string>
    <string name="sight_problems_description">Textos alternativos en todas las imágenes y los videos de la aplicación.</string>
    <string name="sight_problems_description_card">Textos alternativos en todas las imágenes y los videos de la aplicación.Botón.</string>
    <string name="hear_problems_description">Textos adaptados y videos en lenguaje de signos.</string>
    <string name="hear_problems_description_card">Textos adaptados y videos en lenguaje de signos.Botón.</string>
    <string name="talckback_enabled">Se ha activado la narración de textos alternativos en imágenes y vídeos.</string>
    <string name="preferences_description">Para volver a ajustar las opciones de accesibilidad, el idioma o volver a visualizar las instrucciones vaya en cualquier momento a preferencias.</string>
    <string name="disable_accesibility">Desactivar accesibilidad</string>
    <string name="disable_accesibility_description">Desactivar accesibilidad. Botón.</string>
    <string name="conection_Problems">Problemas de conexión. Pruebe de nuevo.</string>
    <string name="loading">Cargando...</string>
    <string name="artwork">Obra</string>
    <string name="CC">Contacto Museums For Everyone</string>
    <string name="send_email">Enviar email</string>
    <string name="email_sent">Se ha enviado el email</string>
    <string name="email_error">No hay ningún cliente de correo instalado.</string>
    <string name="subject">Asunto</string>
    <string name="email_content">Contenido</string>
    <string name="telephone">Teléfono</string>
    <string name="message_hint">Escriba aquí su mensaje</string>
    <string name="contact">Contacto</string>
    <string name="email">Email</string>
    <string name="info_text1">Es una aplicación para ayudar a realizar las visitas al Museo Fundación Caja Granada.</string>
    <string name="info_text2">La aplicación está desarrollada en su totalidad por la startup</string>
    <string name="contact_text">Si necesita contactar con nosotros rellene el siguiente formulario:</string>
    <string name="sign_languaje_instructions">Se ha activado la herramienta de lenguaje de signos. Con ella los vídeos de los contenidos del museo aparecerán en lenguaje de signos.</string>
    <string name="fecha_creacion_obra">"Fecha de creación: "</string>
    <string name="location_artwork">"Localizacion: "</string>
    <string name="accesibility_description_button">Accesibilidad. Opciones de accesibilidad. Botón.</string>
    <string name="language_options_description">Idioma. Selección del idioma en el que se mostrará la aplicación. Botón.</string>
    <string name="instructions_description">Instrucciones. Opción para volver a visualizar las instrucciones de la aplicación. Botón.</string>

</resources>
