<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ugr.redforest.museumsforeveryone.screens.MainActivity">

    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_list_black_24dp"/>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/artwork_list"/>
    </FrameLayout>
    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_location_on_black_24dp"/>
        <TextView
            style="@style/TextViewTheme"
            android:text="@string/guided_visit"
            />
    </FrameLayout>
    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_center_focus_weak_black_24dp"/>
        <TextView
            style="@style/TextViewTheme"
            android:text="@string/artwork_info"
            />
    </FrameLayout>
</LinearLayout>
