<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ugr.redforest.museumsforeveryone.screens.ActivityPreferences">

    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_list_black_24dp"
            android:onClick="launchLanguageActivity"/>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/language"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_accessible_black_24dp"
            android:onClick="launchAccesibility"/>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/accessibility"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutTheme">
        <ImageButton
            style="@style/ImagenButtonTheme"
            android:src="@drawable/ic_subdirectory_arrow_right_black_24dp"
            android:onClick="launchInstructionsActivity"/>

        <TextView
            style="@style/TextViewTheme"
            android:text="@string/instruction_title"/>

    </FrameLayout>

</LinearLayout>
